<resources>
    <string name="app_name">Kitty Message 2</string>

    <!-- text labels on the screen -->
    <string name="message_label">Received message</string>
    <string name="select_message">Select a message</string>

    <!-- radio button labels / output strings -->
    <string name="cat_purr">Purr</string>
    <string name="cat_mew">Mew</string>
    <string name="cat_hiss">Hiss</string>

    <!-- button labels -->
    <string name="get_message">Get Message</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>

    <!-- default output value -->
    <string name="undefined">Undefined</string>

    <!-- urgent / not urgent -->
    <string name="urgent">Urgent</string>
    <string name="not_urgent">Not Urgent</string>

    <!-- the activity labels -->
    <string name="main_activity">Main Activity</string>
    <string name="input_activity">Input Activity</string>

    <!-- the floating label -->
    <string name="sheridan">Sheridan, 2020</string>
</resources>