<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/InputTheme"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".InputActivity">

    <TextView
        android:id="@+id/input_activity_label"
        style="@style/activity_label"
        android:text="@string/input_activity" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <CheckBox
        android:id="@+id/urgent_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/gap0"
        android:checked="true"
        android:text="@string/urgent" />

    <RadioGroup
        android:id="@+id/message_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/mew_button">

        <RadioButton
            android:id="@+id/purr_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cat_purr" />

        <RadioButton
            android:id="@+id/mew_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cat_mew" />

        <RadioButton
            android:id="@+id/hiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cat_hiss" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap2"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginStart="@dimen/gap1"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/sheridan"
        android:text="@string/sheridan"
        style="@style/sheridan_label" />

</LinearLayout>